[tool.poetry]
name = "claire"
version = "0.1.0"
description = ""
authors = ["Blaxav <xav.blanchot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.25.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
